<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/subscribe_activity_bg"
    android:fitsSystemWindows="true"
    android:clipToPadding="false" >
    <include
        android:id="@+id/title_bar"
        layout="@layout/title_bar" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/title_bar" >

        <LinearLayout
            android:id="@+id/subscribe_main_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/subscribe_bg"
            android:orientation="vertical"
            android:paddingBottom="14.0dip" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:layout_marginTop="14.0dip"
                android:gravity="bottom"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/my_category_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subscribe_my_category"
                    android:textColor="@color/subscribe_tip_text"
                    android:textStyle="bold"
                    android:textSize="16.0sp" />

                <TextView
                    android:id="@+id/my_category_tip_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12.0dip"
                    android:text="@string/subscribe_manager_category_info"
                    android:textColor="@color/subscribe_tip_text"
                    android:textSize="11.0sp" />
            </LinearLayout>

            <View
                android:id="@+id/seperate_line"
                style="@style/subscribe_seperate_line" />

            <com.huaxun.news.DragGrid
                android:id="@+id/userGridView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dip"
                android:layout_marginRight="14dip"
                android:gravity="center"
                android:horizontalSpacing="14dip"
                android:listSelector="@android:color/transparent"
                android:numColumns="4"
                android:scrollbars="vertical"
                android:stretchMode="columnWidth"
                android:verticalSpacing="14.0px"  
                android:layoutAnimation="@anim/layout_more_in" />

            <View
                android:id="@+id/seperate_line2"
                style="@style/subscribe_seperate_line" />

            <TextView
                android:id="@+id/more_category_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:text="@string/subscribe_more_category"
                android:textColor="@color/subscribe_tip_text"
                android:textStyle="bold"
                android:textSize="16.0sp" />
            
             <View
                android:id="@+id/seperate_line3"
                style="@style/subscribe_seperate_line" />

            <com.huaxun.news.OtherGridView
                android:id="@+id/otherGridView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dip"
                android:layout_marginRight="14dip"
                android:gravity="center"
                android:horizontalSpacing="14dip"
                android:listSelector="@android:color/transparent"
                android:numColumns="4"
                android:scrollbars="vertical"
                android:stretchMode="columnWidth"
                android:verticalSpacing="14.0px"
                android:layoutAnimation="@anim/layout_more_in" />
        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/category_layout"
        layout="@layout/channel_item"
        android:visibility="gone" />

</RelativeLayout>